--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "autoprefixer": "^10.3.1",
     "framer-motion": "^4.1.17",
+    "postcss": "^8.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "tailwindcss": "^2.2.4",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
