--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "autoprefixer": "^10.3.1",
+    "dotenv": "^10.0.0",
     "framer-motion": "^4.1.17",
     "postcss": "^8.3.5",
     "react": "^17.0.2",
